# ibus-handwrite

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.en  README.zh_CN  autogen.sh  configure.ac  ibus-handwrite.spec.in
data/: Makefile.am  handwrite-jp.appdata.xml  handwrite-zh.appdata.xml  table.txt
debian/: README.Debian  changelog  control  copyright  dirs  rules
doc/: .gitignore  Makefile.am  lucykila_识别原理.tex
icons/: Makefile.am
po/: Makevars  POTFILES.in  ja.po  zh_CN.po
src/: Makefile.am  UI.h  UI_clutter.c  UI_gtk.c  engine.c  engine.h  global_var.h  handrecog.c  handrecog.h  handrecog_lucykila.c  handrecog_zinnia.c  handwrite-jp.xml.in.in  handwrite-zh.xml.in.in  handwrite.xml.in.in  main.c  prase.c  prase.h
